      PM/share/locale/it/LC_MESSAGES/packetmanipulator.mo:
        - Updated catalog and its translation.
    * PM/Gui/Core/MainWindow.py:
        - Codename changed.
    * PM/Backend/Scapy/translator.py:
        - Add radiotap and wifi protocol aliases.
    * setup.py
      scripts/windows/setup.py:
        - Including generation and building of plugins.
        - Fixing documentation inclusion.
    * scripts/i18n/pygettext.py:
        - Fixing the POT header generation.
    * PM/Gui/Core/MainWindow.py:
        - Setting transiet for all dialogs opened.
        - Fixing AboutDialog
    * PM/Backend/Scapy/wrapper.py:
        - Using more reasonable message to warng of scapy missing.
        - Patch select only on posix systems.
    * plugins/geoip/sources/main.py
      plugins/traceroute/sources/libtrace/tracert.py
      plugins/traceroute/sources/main.py:
        - Plugins now are working again.
    * PM/Gui/Sessions/Base.py
      PM/Gui/Widgets/MultiPaneds.py:
        - Fixing bug in removing and adding perspectives.
    * PM/Gui/Core/BugReport.py
      PM/Gui/Core/BugRegister.py:
        - Including traceback in the textview.
        - Fixing version and milestone.
    * PM/Gui/Core/MooPaned.py
      PM/Gui/Core/FallbackPaned.py:
        - Fixing docking libraries.
    * PM/PacketManipulator:
        - Fixing launcher.
    * MANIFEST.in:
        - Include missing pixmaps.
    * PM/Core/Const.py:
        - Constants fixed.
    * ubuntu
      ubuntu/debian
      ubuntu/debian/packet-manipulator.1
      ubuntu/debian/control
      ubuntu/debian/files
      ubuntu/debian/compat
      ubuntu/debian/menu
      ubuntu/debian/install
      ubuntu/debian/changelog
      ubuntu/debian/packet-manipulator.desktop
      ubuntu/debian/copyright
      ubuntu/debian/docs
      ubuntu/debian/rules
      ubuntu/debian/pycompat
      ubuntu/generate_deb.sh:
        - Scripts to generate DEB package for debian and ubuntu.
    * scripts/linux/fedora/generate_rpm.sh: